--- a/ホームページ.html
+++ b/ホームページ.html
@@ -13,7 +13,7 @@
     }
 
     header {
-      background-image: url('https://chat.google.com/u/1/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fjpeg&attachment_token=AOo0EEUYkEi1kARh4hOQAwuf1pQvCqgNUwPCPSb9EBg3nbwy2xyfY8qwuxDQ%2BSJRKYYMBLm0CRIR0Ej8o%2B9AyyRX0i31jEvYyqj39ScD1yWPaFZlGTV819vsh3HBSc9TRtAzwY335hNDVZ7QHLY9jBf9PjsW2G92BKokDCP9tDZarqyDdlE8XLpNM8GX1WXAHzd4ppcyDGNoayM%2Fh2%2B8sVSDzisJt49Q%2FxZcsyVwz782c5BoYpJvd%2FpqYV9nrhXa5qCj8rcTvtnKENlHX5%2FFpQtIosMvg21YxFUvyIrRCd9y0M03PH%2FB5W9i9SL6s61FF9gDH4Hzz9tXASQ7Iz7%2FYk%2FcIYH02Fg3M5h4Mrn4lI9HmO%2Fxy31P09vvdj1QbACCILhirRXaprihIINEoR1OAxtDXIbGrBe9qIOgM7qTcGNQFzQrZ4vi%2FpG32SQoFFGA%2Fn%2BV5pdQCRbySyJB%2BzxkJxMJXpcdH%2Fx0oPgEA3Uey5FylHpZ7EcNm40lT4ieVMf9rfAC9jQF7ec9oi1%2F7GEqaa8oB5vsganOE%2BwdmBy6QG1OKSUJkHwCBI6zOnoAqxCPW8JFwT0V%2FAxCq6I0%2Bogg%2FSXw1gJIbCk%3D&allow_caching=true&authuser=1&sz=w1920-h928&auditContext=forDisplay'); /* 省略 */
+      background-image: url('メインCOCA.png'); /* 省略 */
       background-size: cover;
       background-position: center;
       color: white;
